--- a/cultures.html
+++ b/cultures.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr(f)">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,24 +9,23 @@
 </head>
 <body>
     <header>
-        <!-- <div class="navigation">
+        <div class="navigation">
             <nav class="navbar">
-                ma navbar()
+                
             </nav>
-        </div> -->
+        </div>
         <div class="background">
             <h1>Espace culture</h1>
         </div>
     </header>   
     <main>
-        <div class="my-grid">
         <!-- frist section cinema -->
+        <article>
             <div class="title1">
-                <h2>Festivale</h2>
+                <h2>Cinéma</h2>
             </div>
-            <div class="gri-one">
                 <section class="one">
-                    <img src="./images/fpd.png" alt="poulet en fete" class="image">
+                    <img src="./images/plume.d'or.webp" alt="poulet en fete" class="image">
                     <div>
                         <h3>Festival de la Plume d’Or</h3>
                         <p>
@@ -40,48 +39,68 @@
                         </p>
                     </div>
                 </section>
-            </div>
-            <!-- <div class="gri-two">
-                <section class="two">
-                    <div>
-                        <img src="./images/Nuit-etoiles.png" alt="poulet sous les etoiles">
-                    </div>
-                    <div>
-                        <img src="./images/bgi.jpg" alt="ville poulet">
-                    </div>
-                    <div>
-                        <img src="./images/R&C.png" alt="spectacle des poulet">
-                    </div>
-                    
-                </section>
-            </div>
-            seconde section théatre
+        </article>
+        <article>
+            <section class="one-x" >
+                <div>
+                    <img src="./images/expo.webp" alt="salle de theatre">
+                    <h3>Le Wild Film Fest</h3>
+                    <p>Chaque printemps, Wild City vibre au rythme du Wild Film Fest, un festival où les talents locaux sont à l’honneur. Ce festival en plein air, qui se déroule dans le Parc du Grand Œuf, attire des centaines de spectateurs chaque année. </p>
+                </div>
+                <div>
+                    <img src="./images/etoile.webp" alt="salle de theatre">
+                    <h3>Le Cinéma des Coqs</h3>
+                    <p>Le Cinéma des Coqs, un lieu incontournable de Wild City, est un véritable trésor du passé. Inauguré dans les années 60 par le visionnaire Alfred Beaktail, ce cinéma vintage est une véritable capsule temporelle. </p>
+                </div>
+                <div>
+                    <img src="./images/plume.d'or.webp" alt="salle de theatre">
+                    <h3>La Cinémathèque </h3>
+                    <p>Située au cœur de Wild City, la Cinémathèque est un lieu où l’histoire du cinéma local est préservée avec soin. C’est ici que sont restaurées les premières bobines de films réalisés dans la ville. </p>
+                </div>
+            </section>
+        </article>
+        <!-- deuxieme partie -->
+        <article>
             <div class="title2">
-                    <h2>Théatre</h2>
+                <h2>Théâtre</h2>
             </div>
-            <div class="gri-thris">
-                <section class="thris">
-                    <img src="./images/R&C.png" alt="spectacle des poulet">
+                <section class="two">
+                    <img src="./images/theatre.webp" alt="salle de theatre" class="image">
                     <div>
                         <h3>Roméo et Coqulettes</h3>
-                        <p>Date : 22 décembre 2024
-                            Lieu : Théâtre Gallinacée
+                        <p>
+
+                            Date : 15 décembre 2024 <br>
+                            Lieu : Place des Cocoricos <br>
                             Description :
-                            Une version revisitée et hilarante de Roméo et Juliette, où Juliette est une poule et Roméo un coq d’une ferme voisine.
-                            Blague associée : “Pourquoi Juliette a quitté Roméo ? Il n’arrêtait pas de rouler des œufs !”
-                            Image : Une scène de théâtre avec des poulets costumés en Roméo et Juliette.
-                            </p>
+                            La ville se prépare pour la 10ᵉ édition du Festival de la Plume d’Or, un concours artistique où les habitants décorent leurs plumes avec des motifs colorés. Cette année, le thème est “Plume et Popcorn”.<br>
+                            Blague associée : “Pourquoi les poulets peignent-ils leurs plumes ? Parce que c’est plus chic que de changer de veste !”
+                            Image : Des poulets colorés sur une scène avec des juges en costume.
+                        </p>
                     </div>
                 </section>
-            </div>
-            <div class="gri-four">
-                <section class="four">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </section>
-            </div> -->
-        </div>
+        </article>
+
+        <article>
+            <section class="two-x" >
+                <div>
+                    <img src="./images/expo.webp" alt="salle de theatre">
+                    <h3>Les troupes en vogue  </h3>
+                    <p>Un article présentant les troupes les plus célèbres de la ville. Vous pourriez détailler leurs styles, leurs pièces phares (ex. “Roméo et Poussine” ou “Les Poulets Molière”), et leurs tournées dans les quartiers. </p>
+                </div>
+                <div>
+                    <img src="./images/etoile.webp" alt="salle de theatre">
+                    <h3>Le théâtre pour tous</h3>
+                    <p>Un article sur l’accessibilité du théâtre à Wild City. Parlez des ateliers d’improvisation pour jeunes poussins ou des initiatives pour rendre les spectacles accessibles à tous les habitants, même ceux du poulailler nord. </p>
+                </div>
+                <div>
+                    <img src="./images/plume.d'or.webp" alt="salle de theatre">
+                    <h3>Critique théâtrale </h3>
+                    <p>Une rubrique pour analyser une pièce récente jouée à Wild City. Vous pouvez exagérer les critiques pour faire rire tout en mettant en avant l’événement. </p>
+                </div>
+            </section>
+        </article>
     </main> 
+    <!-- <script src="culture.js" defer></script> -->
 </body>
 </html>
