--- a/index.html
+++ b/index.html
@@ -9,15 +9,35 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');">
     <title>Page|News</title>
 </head>
 
 <body>
     <header>
-        <img src="./images/Journal WildC.png" alt="Image d'accueil">
+        <img src="./Img/Journal WildC.png" alt="Image d'accueil">
 
     </header>
-    <main> </main>
+    <main>
+        <h2>News</h2>
+        <section class="conteneur">
+            <article>
+                <img src="./Img/Guerre des renards.png " alt=" Image Parade">
+                <div class="TP">
+                    <h3>Parade des Poulettes :</h3>
+                    <p>Dans la ville de Wild City, où les poules font la loi,
+                        la grande parade des poulettes a attiré tous les regards…
+                        et quelques grattes-ciel ébahis ! Les habitantes ont défilé
+                        en robe plumes et en escarpins en grains de maïs.
+                    </p>
+                </div>
+            </article>
+
+        </section>
+
+
+    </main>
     <footer></footer>
 
 </body>
