bas de la page gastro, bas de la page loisirs, reste les media a faire

--- a/index.html
+++ b/index.html
@@ -5,49 +5,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Gastronomie</title>
+    <title>loisirs</title>
 </head>
 
 <body>
     <main>
-        <h2> Restaurants:</h2>
-        <section class="restaurants">
-            <article class="Volière">
-                <img class="la_voliere" src="/assets/la voliere facade.jpeg"
-                    alt="vue du restaurant: La Volière Gourmande">
-                <div class="div1">
-                    <h3>La Volière Gourmande</h3>
-                    <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.</p>
-                    <h4> Spécialité:</h4>
-                    <p>Poulet Rôti à l’ herbe de Provence.</p>
-                    <p>Un poulet parfaitement rôti, tendre et parfumé, accompagné d'un mélange d'herbes fraîches et
-                        d'une
-                        sauce maison.</p>
-                </div>
-            </article>
-            <article class="poules_en_fete">
-                <img src="" alt="vue du restaurants les poules en fête">
-                <div class="div2">
-                    <h3>Les Poules en Fête</h3>
-                    <p>Un restaurant où l’ambiance est festive et les poules chantent pour un repas savoureux.</p>
-                    <h4> Spécialité:</h4>
-                    <p>Soupe de Poulet aux Légumes du Marché</p>
-                    <p>Une soupe réconfortante à base de poulet fermier, de légumes de saison et d'herbes fraîches,
-                        idéale pour un repas convivial.</p>
-                </div>
+        <h2> Bars:</h2>
+        <section class="bars">
+            <div class="div6">
+                <article class="mise_en_avant">
+                    <img class="img_bar" src="/assets/le perchoir du coq.webp" alt="vue du bar: le perchoir du coq">
+                    <div class="div1">
+                        <h3>Le Perchoir du Coq</h3>
+                        <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.</p>
+                        <h4> Spécialité:</h4>
+                        <p>Coup de Sanguine:</p>
+                        <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
+                            un verre original.</p>
+                    </div>
+                </article>
+            </div>
 
-            </article>
-            <article class="coq_table">
-                <img src="" alt="vue du restaurant le coq et la table">
-                <div class="div3">
-                    <h3>Le Coq et la Table</h3>
-                    <p>Ici, les poules servent un festin royal sous l’œil attentif du fier coq.</p>
-                    <h4>Spécialité</h4>
-                    <p>Coq au Vin</p>
-                    <p>Un coq mijoté lentement dans un vin rouge savoureux, accompagné de champignons, de lardons et
-                        d'une purée maison onctueuse.</p>
-                </div>
-            </article>
+            <div class="div4">
+                <article class="roti">
+                    <img class="img_bar2" src="/assets/l'oeuf roti bar.webp"
+                        alt="vue du restaurants les poules en fête">
+                    <div class="div2">
+                        <h3>L'Œuf Roti Bar</h3>
+                        <p>Le lieu idéal pour déguster des cocktails uniques dans une ambiance décontractée et
+                            conviviale.
+                        </p>
+                        <h4> Spécialité:</h4>
+                        <p>Citrus Velvet</p>
+                        <p>Un cocktail à base de whisky, blanc d'œuf et citron, crémeux et légèrement acidulé pour une
+                            dégustation unique.</p>
+                    </div>
+                </article>
+
+                <article class="caille">
+                    <img class="img_bar2" src="/assets/la caille et le barman.webp"
+                        alt="vue du restaurant le coq et la table">
+                    <div class="div3">
+                        <h3>La Caille & le Barman</h3>
+                        <p>Ici, les soirées sont chaleureuses, les conversations rient comme des cailles et les verres
+                            s'entrechoquent.</p>
+                        <h4>Spécialité</h4>
+                        <p>Berry Twist</p>
+                        <p>Un gin tonic revisité avec une touche de liqueur de baies et de zestes d’agrumes, pour une
+                            touche
+                            fraîche.</p>
+                    </div>
+                </article>
+                <article class="perchoir">
+                    <img class="img_bar2" src="/assets/le perchoir du coq.webp" alt="vue du bar: le perchoir du coq">
+                    <div class="div5">
+                        <h3>Le Perchoir du Coq</h3>
+                        <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.</p>
+                        <h4> Spécialité:</h4>
+                        <p>Coup de Sanguine:</p>
+                        <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
+                            un
+                            verre original.</p>
+                    </div>
+                </article>
+            </div>
+
         </section>
     </main>
 </body>
