--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>News</h2>
         <section class="conteneur">
             <article>
-                <img src="./Img/Guerre des renards.png " alt=" Image Parade">
+                <img src="./Img/Carnaval.png " alt=" Image Parade">
                 <div class="TP">
                     <h3>Parade des Poulettes :</h3>
                     <p>Dans la ville de Wild City, où les poules font la loi,
@@ -33,8 +33,17 @@
                     </p>
                 </div>
             </article>
+        </section>
+        <section class="conteneur2">
+            <article>
+                <img src="./Img/Maire de wildcity.webp" alt="image du Maire">
+                <div class="TP2>
+                    
+            </article>
 
         </section>
+
+        
 
 
     </main>
