le responsif est fait, manque que les zoom images

--- a/gastronomie.html
+++ b/gastronomie.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <title>loisirs</title>
+    <link rel="stylesheet" href="/gastronomie.css">
+    <title>gastronomie</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                     <div class="div1">
                         <h3>Le Perchoir du Coq</h3>
                         <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.</p>
-                        <h4> Spécialité:</h4>
+                        <p> Spécialité:</p>
                         <p>Coup de Sanguine:</p>
                         <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
                             un verre original.</p>
@@ -35,7 +35,7 @@
                         <p>Le lieu idéal pour déguster des cocktails uniques dans une ambiance décontractée et
                             conviviale.
                         </p>
-                        <h4> Spécialité:</h4>
+                        <p> Spécialité:</p>
                         <p>Citrus Velvet</p>
                         <p>Un cocktail à base de whisky, blanc d'œuf et citron, crémeux et légèrement acidulé pour une
                             dégustation unique.</p>
@@ -49,7 +49,7 @@
                         <h3>La Caille & le Barman</h3>
                         <p>Ici, les soirées sont chaleureuses, les conversations rient comme des cailles et les verres
                             s'entrechoquent.</p>
-                        <h4>Spécialité</h4>
+                        <p>Spécialité:</p>
                         <p>Berry Twist</p>
                         <p>Un gin tonic revisité avec une touche de liqueur de baies et de zestes d’agrumes, pour une
                             touche
@@ -61,8 +61,8 @@
                     <div class="div5">
                         <h3>Le Perchoir du Coq</h3>
                         <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.</p>
-                        <h4> Spécialité:</h4>
-                        <p>Coup de Sanguine:</p>
+                        <p> Spécialité:</p>
+                        <p>Coup de Sanguine</p>
                         <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
                             un
                             verre original.</p>
