--- a/losirs.html
+++ b/losirs.html
@@ -35,13 +35,13 @@
                     <img class="img_sport2" src="/assets/chicken swing.png" alt="vue du restaurants les poules en fête">
                     <div class="div2">
                         <h3>CHICKEN SWING</h3>
-                        <h3>Les Ailes de Wild City</h3>
-                        <h4>Horaires d'entraînement :</h4>
+                        <p>Les Ailes de Wild City</p>
+                        <p>Horaires d'entraînement :</p>
                         <p>Lundi :17h30 - 19h00</p>
                         <p>Mercredi : 18h00 - 20h00</p>
                         <p>Vendredi : 19h00 - 21h00</p>
                         <p>Dimanche : 11h00 - 13h00</p>
-                        <h4>Adresse:</h4>
+                        <p>Adresse:</p>
                         <p>Le Vol du Coq, 87 Avenue des Grains</p>
                     </div>
                 </article>
@@ -50,13 +50,13 @@
                     <img class="img_sport2" src="/assets/poulepong.png" alt="vue du restaurant le coq et la table">
                     <div class="div3">
                         <h3>POULE PONG</h3>
-                        <h3>Les Poussins de Wild City</h3>
-                        <h4>Horaires d'entraînement :</h4>
+                        <p>Les Poussins de Wild City</p>
+                        <p>Horaires d'entraînement :</p>
                         <p>Mardi :17h30 - 19h00</p>
                         <p>Jeudi : 18h00 - 20h00</p>
                         <p>Samedi : 19h00 - 21h00</p>
                         <p>Dimanche : 11h00 - 13h00</p>
-                        <h4>Adresse:</h4>
+                        <p>Adresse:</p>
                         <p>Court des Coqs, 134 Boulevard des Ailes</p>
                     </div>
                 </article>
@@ -64,14 +64,14 @@
                     <img class="img_sport2" src="/assets/chicken ball.png" alt="vue du bar: le perchoir du coq">
                     <div class="div5">
                         <h3>CHICKEN BALL</h3>
-                        <h3>Les Coqs de Wild City</h3>
-                        <h4>Horaires d'entraînement :</h4>
+                        <p>Les Coqs de Wild City</p>
+                        <p>Horaires d'entraînement :</p>
                         <p>Lundi : 18h00 - 20h00</p>
                         <p>Mercredi : 19h00 - 21h00</p>
                         <p>Vendredi : 17h30 - 19h30</p>
                         <p>Dimanche : 10h00 - 12h00</p>
 
-                        <h4>Adresse:</h4>
+                        <p>Adresse:</p>
                         <p>Stade des Volants, 123 Rue des Plumes</p>
                     </div>
                 </article>
