--- a/cultures.html
+++ b/cultures.html
@@ -69,13 +69,11 @@
                     <div>
                         <h3>Roméo et Coqulettes</h3>
                         <p>
-
-                            Date : 15 décembre 2024 <br>
-                            Lieu : Place des Cocoricos <br>
+                            Date : 22 décembre 2024 <br>
+                            Lieu : Théâtre Gallinacée <br>
                             Description :
-                            La ville se prépare pour la 10ᵉ édition du Festival de la Plume d’Or, un concours artistique où les habitants décorent leurs plumes avec des motifs colorés. Cette année, le thème est “Plume et Popcorn”.<br>
-                            Blague associée : “Pourquoi les poulets peignent-ils leurs plumes ? Parce que c’est plus chic que de changer de veste !”
-                            Image : Des poulets colorés sur une scène avec des juges en costume.
+                            Une version revisitée et hilarante de Roméo et Juliette, où Juliette est une poule et Roméo un coq d’une ferme voisine.
+                            Blague associée : “Pourquoi Juliette a quitté Roméo ? Il n’arrêtait pas de rouler des œufs !”
                         </p>
                     </div>
                 </section>
@@ -101,6 +99,6 @@
             </section>
         </article>
     </main> 
-    <!-- <script src="culture.js" defer></script> -->
+    <script src="culture.js" defer></script>
 </body>
 </html>
