Ajout de la nav bar trop stylée de William sur la page Gastronomie

--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
 
 <body>
     <header>
-        <div class="navigation">
-            <nav class="navbar">
-
-            </nav>
-        </div>
-        <div class="background">
-            <h1>Espace gastronomie</h1>
-        </div>
+        <div class="test"></div>
+        <nav>
+            <p><a href="index.html"></a></p>
+            <ul>
+                <li><a href="test.html" class="default">🏠</a></li>
+                <li><a href="test.html">Gastronomie</a></li>
+                <li><a href="">Loisirs</a></li>
+                <li><a href="">Cultures</a></li>
+                <li><a href="">News</a></li>
+                <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
+            </ul>
+            <div class="search-container">
+                <input type="search" class="search-bar" placeholder="Rechercher..." />
+                <span class="search-icon">&#128269;</span>
+            </div>
+        </nav>
     </header>
 
     <!--Article mis en avant 1 -->
