ajout des pages annexes

--- a/gastronomie.html
+++ b/gastronomie.html
@@ -22,6 +22,9 @@
                         <p>Coup de Sanguine:</p>
                         <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
                             un verre original.</p>
+                        <a href="./perchoir du coq.html">
+                            <button>En savoir plus</button>
+                        </a>
                     </div>
                 </article>
             </div>
@@ -32,6 +35,9 @@
                         alt="vue du restaurants les poules en fête">
                     <div class="div2">
                         <h3>L'Œuf Roti Bar</h3>
+                        <a href="./l'oeuf roti bar.html">
+                            <button>En savoir plus</button>
+                        </a>
                         <p>Le lieu idéal pour déguster des cocktails uniques dans une ambiance décontractée et
                             conviviale.
                         </p>
@@ -47,6 +53,9 @@
                         alt="vue du restaurant le coq et la table">
                     <div class="div3">
                         <h3>La Caille & le Barman</h3>
+                        <a href="./caille&barman.html">
+                            <button>En savoir plus</button>
+                        </a>
                         <p>Ici, les soirées sont chaleureuses, les conversations rient comme des cailles et les verres
                             s'entrechoquent.</p>
                         <p>Spécialité:</p>
@@ -60,6 +69,9 @@
                     <img class="img_bar2" src="/assets/le perchoir du coq.webp" alt="vue du bar: le perchoir du coq">
                     <div class="div5">
                         <h3>Le Perchoir du Coq</h3>
+                        <a href="./perchoir du coq.html">
+                            <button>En savoir plus</button>
+                        </a>
                         <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.</p>
                         <p> Spécialité:</p>
                         <p>Coup de Sanguine</p>
