remise en marche des liens de page

--- a/gastronomie/l'oeuf roti bar.html
+++ b/gastronomie/l'oeuf roti bar.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/l'oeuf roti bar.css">
-    <title>perchoir du coq</title>
+    <link rel="stylesheet" href="/gastronomie/l'oeuf roti bar.css">
+    <title>l'Oeuf roti bar</title>
 </head>
 
 <body>
