--- a/gastronomie/perchoir du coq.html
+++ b/gastronomie/perchoir du coq.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/perchoir du coq.css">
+    <link rel="stylesheet" href="/gastronomie/perchoir du coq.css">
     <title>perchoir du coq</title>
 </head>
 
