--- a/gastronomie/caille&barman.html
+++ b/gastronomie/caille&barman.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/caille&barman.css">
+    <link rel="stylesheet" href="/gastronomie/caille&barman.css">
     <title>la Caille & le Barman</title>
 </head>
 
