--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/gastronomie.css">
+    <link rel="stylesheet" href="/gastronomie/gastronomie.css">
     <title>gastronomie</title>
 </head>
 
