Page d'accueil terminer, responsive a faire !

--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
           <div class="jsp-left">
             <h3>Festival de la Plume d'Or</h3>
             <p>
-              Explorez la ligne d’horizon à couper le souffle de WorldCity, un
-              mélange parfait d’architecture moderne et de beauté naturelle.
+              Pour la 10ᵉ édition du Festival de la Plume d’Or, un concours
+              artistique où les habitants décorent leurs plumes avec des motifs
+              colorés.
             </p>
             <button><a href="">En savoir plus</a></button>
           </div>
@@ -105,10 +106,11 @@
         </div>
         <div class="jsp-box">
           <div class="jsp-left">
-            <h3>Vue sur les toits</h3>
+            <h3>Chicken Ball</h3>
             <p>
-              Explorez la ligne d’horizon à couper le souffle de WorldCity, un
-              mélange parfait d’architecture moderne et de beauté naturelle.
+              Ce sport emblématique à Wild City rassemble les poulets dans des
+              compétitions effervescentes où agilité et stratégie sont des clés
+              de réussite.
             </p>
             <button><a href="">En savoir plus</a></button>
           </div>
@@ -116,10 +118,10 @@
         </div>
         <div class="jsp-box">
           <div class="jsp-left">
-            <h3>Vue sur les toits</h3>
+            <h3>Roméo & Coqulettes</h3>
             <p>
-              Explorez la ligne d’horizon à couper le souffle de WorldCity, un
-              mélange parfait d’architecture moderne et de beauté naturelle.
+              Une version revisitée et hilarante de Roméo et Juliette, où
+              Juliette est une poule et Roméo un coq d’une ferme voisine.
             </p>
             <button><a href="">En savoir plus</a></button>
           </div>
@@ -149,14 +151,17 @@
           </div>
           <div class="avis-item">
             <h3>Marc Œuflard</h3>
-            <p>Très amusant ! La chasse aux œufs d’or est une super idée."</p>
+            <p>
+              Très amusant ! La chasse aux œufs d’or est une super idée. Merci
+              pour cette expérience unique, je reviendrai !"
+            </p>
             <div class="stars">★★★★☆</div>
           </div>
           <div class="avis-item">
             <h3>Sophie Cocorette</h3>
             <p>
               Parfait pour les fans de gallinacées. J’ai adoré le safari
-              poulailler
+              poulailler. Une expérience inoubliable!
             </p>
             <div class="stars">★★★★☆</div>
           </div>
@@ -202,24 +207,6 @@
       </div>
     </div>
 
-    <script>
-      window.addEventListener("scroll", () => {
-        const nav = document.querySelector("nav");
-        const searchBar = document.querySelector(".search-bar");
-        if (window.scrollY > 20) {
-          // 20px correspond à environ 2 cm
-          nav.classList.add("shrink");
-        } else {
-          nav.classList.remove("shrink");
-        }
-      });
-
-      document
-        .getElementById("close-welcome")
-        .addEventListener("click", function () {
-          const overlay = document.getElementById("welcome-overlay");
-          overlay.style.display = "none"; // Cache la page de bienvenue
-        });
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
