Week end working

--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="./Img/Journal WildC.png" alt="Image d'accueil">
+        <img src="./Img/Newspaper.png" alt="Image d'accueil">
 
     </header>
     <main>
@@ -31,6 +31,7 @@
                         et quelques grattes-ciel ébahis ! Les habitantes ont défilé
                         en robe plumes et en escarpins en grains de maïs.
                     </p>
+
                 </div>
             </article>
         </section>
@@ -88,7 +89,7 @@
             </article>
             <article>
                 <img class="modèle" src="./Img/Policier poulet.webp" alt="image policier">
-                <div class="TP5">
+                <div class="TP4">
 
                     <h3> Au Revoir Poulet: </h3>
 
