regropement sur la page gastro Luigi+Thomas

--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -10,6 +10,107 @@
 
 <body>
     <main>
+
+        <header>
+            <div class="test"></div>
+            <nav>
+                <p><a href="index.html"></a></p>
+                <ul>
+                    <li><a href="test.html" class="default">🏠</a></li>
+                    <li><a href="test.html">Gastronomie</a></li>
+                    <li><a href="">Loisirs</a></li>
+                    <li><a href="">Cultures</a></li>
+                    <li><a href="">News</a></li>
+                    <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
+                </ul>
+                <div class="search-container">
+                    <input type="search" class="search-bar" placeholder="Rechercher..." />
+                    <span class="search-icon">&#128269;</span>
+                </div>
+            </nav>
+        </header>
+
+        <!--Article mis en avant 1 -->
+        <h2>Gastronomie</h2>
+        <div class="featured-article">
+            <article id="featured-article">
+                <img id="featured-image" src="/assets/La_voliere_gourmande.png" alt="Image de l'article">
+                <div>
+                    <h2>La Volière Gourmande</h2>
+                    <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.
+
+                        Spécialité :
+                        Poulet Rôti à l’ herbe de ProvenceUn poulet parfaitement rôti, tendre et parfumé, accompagné
+                        d'un
+                        mélange d'herbes fraîches et d'une sauce maison.Un lieu où chaque plat est une envolée de
+                        saveurs,
+                        inspirée par nos amis à plumes.Spécialité :
+                        Un lieu où chaque plat est une envolée de saveurs,
+                    </p>
+                    <button class="B1">En savoir +</button>
+                    <button class="B2">Catégories</button>
+
+                </div>
+
+            </article>
+        </div>
+
+        <!-- Section 2 : Carrousel des autres articles -->
+        <div class="carrousel-container">
+            <div class="test1"><button class="prev" aria-label="Précédent">&lt;</button></div>
+
+            <!-- Carrousel -->
+            <div class="carrousel">
+                <div class="carrousel-item" data-article="1">
+                    <article>
+
+                        <img src="/assets/Le_Coq_et_la_table.png" alt="Image de l'Article 1">
+                        <h2>Le Coq et la table</h2>
+                        <span>En savoir +</span>
+                        <p>Ici, les poules servent un festin royal sous l’œil attentif du fier coq.
+
+                            Spécialité :
+                            Coq au VinUn coq mijoté lentement dans un vin rouge savoureux, accompagné de champignons, de
+                            lardons et d'une purée maison onctueuse.Ici, les poules servent un festin royal sous l’œil
+                            attentif du fier coq.
+                        </p>
+                    </article>
+                </div>
+                <div class="carrousel-item" data-article="2">
+                    <article>
+
+                        <img src="/assets/Les_Poules_en_fete.png" alt="Image de l'Article 2">
+                        <h2>Les Poules en fête</h2>
+                        <span>En savoir +</span>
+                        <p>Un restaurant où l’ambiance est festive et les poules chantent pour un repas savoureux.
+
+                            Spécialité :
+                            Soupe de Poulet aux Légumes du MarchéUne soupe réconfortante à base de poulet fermier, de
+                            légumes de saison et d'herbes fraîches, idéale pour un repas convivial.</p>
+                    </article>
+                </div>
+                <div class="carrousel-item" data-article="3">
+                    <article>
+
+                        <img src="/assets/La_voliere_gourmande.png" alt="Image de l'Article 2">
+                        <h2>La Volière Gourmande</h2>
+                        <span>En savoir +</span>
+                        <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.
+
+                            Spécialité :
+                            Poulet Rôti à l’ herbe de ProvenceUn poulet parfaitement rôti, tendre et parfumé, accompagné
+                            d'un
+                            mélange d'herbes fraîches et d'une sauce maison.</p>
+                    </article>
+                </div>
+            </div>
+
+            <div class="test2"><button class="next" aria-label="Suivant">&gt;</button></div>
+        </div>
+
+
+
+
         <h2> Bars:</h2>
         <section class="bars">
             <div class="div6">
