--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -30,99 +30,94 @@
             </nav>
         </header>
 
-        <!--Article mis en avant 1 -->
-        <h2>Gastronomie</h2>
-        <div class="featured-article">
-            <article id="featured-article">
-                <img id="featured-image" src="/assets/La_voliere_gourmande.png" alt="Image de l'article">
-                <div>
-                    <h2>La Volière Gourmande</h2>
-                    <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.
-
-                        Spécialité :
-                        Poulet Rôti à l’ herbe de ProvenceUn poulet parfaitement rôti, tendre et parfumé, accompagné
-                        d'un
-                        mélange d'herbes fraîches et d'une sauce maison.Un lieu où chaque plat est une envolée de
-                        saveurs,
-                        inspirée par nos amis à plumes.Spécialité :
-                        Un lieu où chaque plat est une envolée de saveurs,
-                    </p>
-                    <button class="B1">En savoir +</button>
-                    <button class="B2">Catégories</button>
-
-                </div>
-
-            </article>
-        </div>
-
-        <!-- Section 2 : Carrousel des autres articles -->
-        <div class="carrousel-container">
-            <div class="test1"><button class="prev" aria-label="Précédent">&lt;</button></div>
-
-            <!-- Carrousel -->
-            <div class="carrousel">
-                <div class="carrousel-item" data-article="1">
-                    <article>
-
-                        <img src="/assets/Le_Coq_et_la_table.png" alt="Image de l'Article 1">
-                        <h2>Le Coq et la table</h2>
-                        <span>En savoir +</span>
-                        <p>Ici, les poules servent un festin royal sous l’œil attentif du fier coq.
-
-                            Spécialité :
-                            Coq au VinUn coq mijoté lentement dans un vin rouge savoureux, accompagné de champignons, de
-                            lardons et d'une purée maison onctueuse.Ici, les poules servent un festin royal sous l’œil
-                            attentif du fier coq.
-                        </p>
-                    </article>
-                </div>
-                <div class="carrousel-item" data-article="2">
-                    <article>
-
-                        <img src="/assets/Les_Poules_en_fete.png" alt="Image de l'Article 2">
-                        <h2>Les Poules en fête</h2>
-                        <span>En savoir +</span>
-                        <p>Un restaurant où l’ambiance est festive et les poules chantent pour un repas savoureux.
-
-                            Spécialité :
-                            Soupe de Poulet aux Légumes du MarchéUne soupe réconfortante à base de poulet fermier, de
-                            légumes de saison et d'herbes fraîches, idéale pour un repas convivial.</p>
-                    </article>
-                </div>
-                <div class="carrousel-item" data-article="3">
-                    <article>
-
-                        <img src="/assets/La_voliere_gourmande.png" alt="Image de l'Article 2">
-                        <h2>La Volière Gourmande</h2>
-                        <span>En savoir +</span>
-                        <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.
-
-                            Spécialité :
-                            Poulet Rôti à l’ herbe de ProvenceUn poulet parfaitement rôti, tendre et parfumé, accompagné
-                            d'un
-                            mélange d'herbes fraîches et d'une sauce maison.</p>
-                    </article>
-                </div>
+        <h1>Gastronomie</h1>
+        <h2>Restaurants:</h2>
+        <section class="restaurants">
+            <div class="div7">
+                <article class="mise_en_avant">
+                    <img class="img_restaurant" src="/assets/La_voliere_gourmande.png" alt="la La_voliere_gourmande">
+                    <div class="div8">
+                        <h3>La Volière Gourmande</h3>
+                        <p>Ici, les poules servent un festin royal sous l’œil attentif du fier coq.</p>
+                        <p> Spécialité:</p>
+                        <p>Poulet Rôti à l’ herbe de Provence:</p>
+                        <p>Un poulet parfaitement rôti, tendre et parfumé, accompagné d'un mélange d'herbes fraîches et
+                            d'une sauce maison.Un lieu où chaque plat est une envolée de
+                            saveurs, inspirée par nos amis à plumes.</p>
+                        <a href="./perchoir du coq.html">
+                            <button>En savoir plus</button>
+                        </a>
+                    </div>
+                </article>
             </div>
 
-            <div class="test2"><button class="next" aria-label="Suivant">&gt;</button></div>
-        </div>
+            <div class="div4">
+                <article class="coq">
+                    <img class="img_restaurant2" src="/assets/Le_Coq_et_la_table.png"
+                        alt="vue du restaurant le coq & la table">
+                    <div class="div2">
+                        <h3>Le Coq & la Table</h3>
+                        <a href="./l'oeuf roti bar.html">
+                            <button>En savoir plus</button>
+                        </a>
+                        <p>Ici, les poules servent un festin royal sous l’œil attentif du fier coq.</p>
+                        <p> Spécialité:</p>
+                        <p>Coq au VinUn coq</p>
+                        <p>mijoté lentement dans un vin rouge savoureux, accompagné de
+                            champignons, de
+                            lardons et d'une purée maison onctueuse.Ici, les poules servent un festin royal sous
+                            l’œil
+                            attentif du fier coq.</p>
+                    </div>
+                </article>
 
+                <article class="poules">
+                    <img class="img_restaurant2" src="/assets/Les_Poules_en_fete.png"
+                        alt="vue du restaurant: les poules en fete">
+                    <div class="div5">
+                        <h3>Les Poules en Fete</h3>
+                        <a href="./perchoir du coq.html">
+                            <button>En savoir plus</button>
+                        </a>
+                        <p>Un restaurant où l’ambiance est festive et les poules chantent pour un repas savoureux.</p>
+                        <p> Spécialité:</p>
+                        <p>Soupe de Poulet aux Légumes du Marché</p>
+                        <p>Une soupe réconfortante à base de poulet fermier, de légumes de saison et d'herbes fraîches,
+                            idéale pour un repas convivial.</p>
+                    </div>
+                </article>
 
-
+                <article class="volière">
+                    <img class="img_restaurant2" src="/assets/La_voliere_gourmande.png"
+                        alt="vue du restaurant: la La_voliere_gourmande">
+                    <div class="div5">
+                        <h3>La Volière Gourmande</h3>
+                        <a href="./perchoir du coq.html">
+                            <button>En savoir plus</button>
+                        </a>
+                        <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.</p>
+                        <p> Spécialité:</p>
+                        <p>Poulet Rôti à l’ herbe de Provence</p>
+                        <p>Un poulet parfaitement rôti, tendre et parfumé,
+                            accompagné d'un mélange d'herbes fraîches et d'une sauce maison.</p>
+                    </div>
+                </article>
+            </div>
+        </section>
 
         <h2> Bars:</h2>
         <section class="bars">
             <div class="div6">
                 <article class="mise_en_avant">
-                    <img class="img_bar" src="/assets/le perchoir du coq.webp" alt="vue du bar: le perchoir du coq">
+                    <img class="img_bar" src="/assets/le perchoir du coq.png" alt="vue du bar: le perchoir du coq">
                     <div class="div1">
                         <h3>Le Perchoir du Coq</h3>
-                        <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.</p>
+                        <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.
+                        </p>
                         <p> Spécialité:</p>
                         <p>Coup de Sanguine:</p>
-                        <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
-                            un verre original.</p>
+                        <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi
+                            dans un verre original.</p>
                         <a href="./perchoir du coq.html">
                             <button>En savoir plus</button>
                         </a>
@@ -132,8 +127,7 @@
 
             <div class="div4">
                 <article class="roti">
-                    <img class="img_bar2" src="/assets/l'oeuf roti bar.webp"
-                        alt="vue du restaurants les poules en fête">
+                    <img class="img_bar2" src="/assets/l'oeuf roti bar.png" alt="vue du bar l'oeuf roti">
                     <div class="div2">
                         <h3>L'Œuf Roti Bar</h3>
                         <a href="./l'oeuf roti bar.html">
@@ -144,41 +138,41 @@
                         </p>
                         <p> Spécialité:</p>
                         <p>Citrus Velvet</p>
-                        <p>Un cocktail à base de whisky, blanc d'œuf et citron, crémeux et légèrement acidulé pour une
-                            dégustation unique.</p>
+                        <p>Un cocktail à base de whisky, blanc d'œuf et citron, crémeux et légèrement acidulé pour
+                            une dégustation unique.</p>
                     </div>
                 </article>
 
                 <article class="caille">
-                    <img class="img_bar2" src="/assets/la caille et le barman.webp"
-                        alt="vue du restaurant le coq et la table">
+                    <img class="img_bar2" src="/assets/la caille et le barman.png"
+                        alt="vue du bar la Caille & le Barman">
                     <div class="div3">
                         <h3>La Caille & le Barman</h3>
                         <a href="./caille&barman.html">
                             <button>En savoir plus</button>
                         </a>
-                        <p>Ici, les soirées sont chaleureuses, les conversations rient comme des cailles et les verres
+                        <p>Ici, les soirées sont chaleureuses, les conversations rient comme des cailles et les
+                            verres
                             s'entrechoquent.</p>
                         <p>Spécialité:</p>
                         <p>Berry Twist</p>
-                        <p>Un gin tonic revisité avec une touche de liqueur de baies et de zestes d’agrumes, pour une
-                            touche
-                            fraîche.</p>
+                        <p>Un gin tonic revisité avec une touche de liqueur de baies et de zestes d’agrumes, pour
+                            une touche fraîche.</p>
                     </div>
                 </article>
                 <article class="perchoir">
-                    <img class="img_bar2" src="/assets/le perchoir du coq.webp" alt="vue du bar: le perchoir du coq">
+                    <img class="img_bar2" src="/assets/le perchoir du coq.png" alt="vue du bar: le perchoir du coq">
                     <div class="div5">
                         <h3>Le Perchoir du Coq</h3>
                         <a href="./perchoir du coq.html">
                             <button>En savoir plus</button>
                         </a>
-                        <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.</p>
+                        <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.
+                        </p>
                         <p> Spécialité:</p>
                         <p>Coup de Sanguine</p>
                         <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
-                            un
-                            verre original.</p>
+                            un verre original.</p>
                     </div>
                 </article>
             </div>
