--- a/cultures.html
+++ b/cultures.html
@@ -30,6 +30,11 @@
         <div class="background">
             <h1>Espace culture</h1>
         </div>
+        <div id="countdown-container">
+            <h2>Événement à venir</h2>
+            <p>Il reste :</p>
+            <div id="countdown"></div>
+        </div>
     </header>   
     <main>
         <!-- frist section cinema -->
