point transmission groupe

--- a/news.html
+++ b/news.html
@@ -17,6 +17,21 @@
 <body>
     <header>
         <img src="./Img/Newspaper.png" alt="Image d'accueil">
+        <div class="navigation">
+            <nav>
+                <p><a href="index.html"></a></p>
+                <ul>
+                    <li><a href="index.html" class="default">🏠</a></li>
+                    <li><a href="Gastronomie.html">Gastronomie</a></li>
+                    <li><a href="Loisirs.html">Loisirs</a></li>
+                    <li><a href="./cultures.html">Cultures</a></li>
+                    <li><a href="./news.html">News</a></li>
+                    <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
+                </ul>
+                <div class="search-container">
+                    <input type="search" class="search-bar" placeholder="Rechercher..." />
+                    <span class="search-icon">&#128269;</span>
+                </div>
 
     </header>
     <main>
@@ -31,6 +46,7 @@
                         et quelques grattes-ciel ébahis ! Les habitantes ont défilé
                         en robe plumes et en escarpins en grains de maïs.
                     </p>
+                    <a href="grand-article" style="color:darkgoldenrod" class="read-more">Lire l'article complet</a>
 
                 </div>
             </article>
@@ -49,6 +65,7 @@
                         des œufs en chocolat.Le poulet, fier de son succès, promet d'
                         augmenter le budget de la foire annuelle.
                     </p>
+                    <a href="big-article" style="color:darkgoldenrod" class="read-again">Lire l'article complet</a>
                 </div>
             </article>
 
@@ -72,7 +89,7 @@
         </section>
         <!-- <section class="bigconteneur"> -->
         <section class="conteneur4">
-            <article>
+            <article class="chantier">
                 <img class="modèle" src="./Img/poulet chantier (2).png" alt="image travaux">
                 <div class="TP4">
 
@@ -87,7 +104,7 @@
                     </p>
                 </div>
             </article>
-            <article>
+            <article class="Poulet">
                 <img class="modèle" src="./Img/Policier poulet.webp" alt="image policier">
                 <div class="TP4">
 
@@ -109,7 +126,7 @@
 
     </main>
     <footer></footer>
-
+    <script src="news.js"></script>
 </body>
 
 </html>
